--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
   "name": "webview-react",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~48.0.15",
+    "expo-device": "^5.2.1",
+    "expo-location": "~15.1.1",
+    "expo-permissions": "^14.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.7",
+    "react-native-web": "~0.18.11",
+    "react-native-webview": "^12.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@types/react-native": "^0.72.0",
     "typescript": "^4.9.4"
   },
   "private": true
