--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "~48.0.15",
+    "expo-camera": "^13.2.1",
     "expo-device": "^5.2.1",
     "expo-location": "~15.1.1",
     "expo-permissions": "^14.1.1",
@@ -16,9 +17,9 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.8",
     "react-native-web": "~0.18.11",
-    "react-native-webview": "^12.0.2"
+    "react-native-webview": "11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
